# Race-simulator-2.0

./: Air.cpp  Air.h  Boots.cpp  Boots.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Classes.cpp  Classes.hpp  Display.cpp  Display.h  Eagle.cpp  Eagle.h  Fast_camel.cpp  Fast_camel.h  Keyboard.h  Localization.cpp  Localization.hpp  Magic_broom.cpp  Magic_broom.h  Magic_carpet.cpp  Magic_carpet.h  Terrestrial.cpp  Terrestrial.h  Units_ABC.cpp  Units_ABC.h  main.cpp
